# mimalloc-cleanup

./: .gitmodules  CMakeLists.txt  exe.cpp  lib.cpp  lib.h  mimalloc-debug-output.diff
